# connect-rust

./: CHANGELOG.md  Cargo.toml  README.md  Taskfile.yaml
.github/workflows/: ci.yml  cla.yaml  publish-crates.yml
benches/rpc/: Cargo.toml
benches/rpc/benches/: cross_impl_bench.rs  rpc_bench.rs
conformance/: Cargo.toml
conformance/src/: lib.rs
connectrpc/: Cargo.toml
connectrpc-build/: Cargo.toml
connectrpc-build/src/: lib.rs
connectrpc-codegen/: Cargo.toml  Dockerfile  buf.plugin.yaml
connectrpc-codegen/src/: codegen.rs
connectrpc/src/: handler.rs  lib.rs  server.rs  service.rs
connectrpc/src/client/: http2.rs
examples/bazel/: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  setup.sh  stub.rs
examples/bazel/proto/anthropic/connectrpc/examples/greet/v1/: greet.proto
examples/bazel/src/: lib.rs
examples/bazel/tools/: BUILD.bazel  diff_outputs.sh
examples/eliza/: Cargo.toml
examples/eliza/src/: eliza.rs
examples/multiservice/: Cargo.toml
tests/streaming/: Cargo.toml
tests/streaming/src/: lib.rs
