[package]
name = "connectrpc"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A Tower-based Rust implementation of the ConnectRPC protocol"
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Core HTTP types (framework-agnostic)
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }

# Tower service abstraction (the foundation)
tower = { workspace = true }

# Async runtime (minimal features for core)
tokio = { workspace = true, features = ["rt", "io-util", "sync"] }
futures = { workspace = true }
pin-project = { workspace = true }

# Protobuf
buffa = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Compression (optional)
flate2 = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }

# Streaming compression (optional)
async-compression = { workspace = true, optional = true }
tokio-util = { workspace = true, features = ["codec", "io"] }

# Error handling
thiserror = { workspace = true }

# Utilities
percent-encoding = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }

# Optional: Hyper (for server and/or client)
hyper = { workspace = true, optional = true }
hyper-util = { workspace = true, optional = true }

# Optional: Axum integration
axum = { workspace = true, optional = true }

# OS error codes for transient error handling
libc = { workspace = true, optional = true }

# Tower middleware for panic handling
tower-http = { workspace = true, optional = true, features = ["catch-panic"] }

# TLS (optional)
rustls = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
hyper-rustls = { workspace = true, optional = true }
rustls-pki-types = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
tempfile = { workspace = true }
rcgen = { workspace = true }
buffa-types = { workspace = true }

[features]
default = ["gzip", "zstd", "streaming"]

# Compression algorithms
gzip = ["dep:flate2", "async-compression?/gzip"]
zstd = ["dep:zstd", "async-compression?/zstd"]
streaming = ["dep:async-compression"]

# Standalone hyper-based server (convenience feature)
server = [
    "hyper/server",
    "hyper/http1",
    "hyper/http2",
    "hyper-util/server",
    "hyper-util/tokio",
    "hyper-util/http1",
    "hyper-util/http2",
    "dep:hyper",
    "dep:hyper-util",
    "dep:libc",
    "dep:tower-http",
    "tokio/net",
    "tokio-util/rt",
]

# HTTP client with connection pooling
client = [
    "hyper/client",
    "hyper/http1",
    "hyper/http2",
    "hyper-util/client",
    "hyper-util/client-legacy",
    "hyper-util/tokio",
    "hyper-util/http1",
    "hyper-util/http2",
    "dep:hyper",
    "dep:hyper-util",
    "tokio/net",
]

# TLS support for the built-in server (Server::with_tls)
server-tls = ["dep:rustls", "dep:tokio-rustls", "server"]

# TLS support for the HTTP client transports (HttpClient::with_tls,
# Http2Connection::connect_tls/lazy_tls)
client-tls = [
    "dep:rustls",
    "dep:tokio-rustls",
    "dep:hyper-rustls",
    "dep:rustls-pki-types",
    "client",
]

# Convenience meta-feature: enable both server and client TLS
tls = ["server-tls", "client-tls"]

# Framework integrations
axum = ["dep:axum"]

[lints]
workspace = true
