[package]
name = "rpc-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
connectrpc = { path = "../../connectrpc", features = ["server", "client"] }
buffa = { workspace = true }
buffa-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
futures = { workspace = true }
redis = { version = "1.0", default-features = false, features = ["tokio-comp"] }
criterion = { version = "0.5", features = ["async_tokio"] }
pprof = { version = "0.15", features = ["criterion", "flamegraph", "protobuf-codec"] }

[[bin]]
name = "fortune_server"

[[bin]]
name = "fortune_load"

[[bin]]
name = "fortune_bench"

[[bin]]
name = "echo_server"

[[bin]]
name = "echo_bench"

[[bin]]
name = "echo_load"

[[bin]]
name = "log_server"

[[bin]]
name = "log_load"

[[bin]]
name = "log_bench"

[[bin]]
name = "log_server_noutf8"

[[bin]]
name = "log_load_noutf8"

[[bench]]
name = "rpc_bench"
harness = false

[[bench]]
name = "cross_impl_bench"
harness = false

[lints]
workspace = true
