load("@rules_buf//buf:defs.bzl", "buf_lint_test")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

# A standard rules_proto target wrapping the .proto file. The
# `strip_import_prefix` makes imports resolve from the canonical
# package path (`anthropic/connectrpc/examples/greet/v1/greet.proto`)
# rather than the on-disk `proto/...` location.
proto_library(
    name = "greet_proto",
    srcs = ["proto/anthropic/connectrpc/examples/greet/v1/greet.proto"],
    strip_import_prefix = "/proto",
)

# rules_buf integration: enforces lint rules from the buf STANDARD ruleset
# on every `bazel test` invocation. The same `buf.yaml` is consumed by the
# `buf` CLI for local development.
buf_lint_test(
    name = "greet_proto_lint",
    config = "//:buf.yaml",
    module = "proto",
    targets = [":greet_proto"],
)

# Code generation: invoke protoc with our three plugins.
#
# Output naming is deterministic given the proto file path: a file at
# `proto/anthropic/connectrpc/examples/greet/v1/greet.proto` becomes
# `anthropic.connectrpc.examples.greet.v1.greet.rs`. The packaging plugin
# emits a `mod.rs` that nests `pub mod` blocks matching the proto's
# `package` declaration and `include!`s the per-file output as a sibling.
#
# Two output trees are produced — one with buffa message types, one with
# connectrpc service stubs — because the plugins emit colliding filenames
# (both `mod.rs` and `<package>.rs`).
genrule(
    name = "gen_code",
    srcs = ["proto/anthropic/connectrpc/examples/greet/v1/greet.proto"],
    outs = [
        "generated/buffa/mod.rs",
        "generated/buffa/anthropic.connectrpc.examples.greet.v1.greet.rs",
        "generated/connect/mod.rs",
        "generated/connect/anthropic.connectrpc.examples.greet.v1.greet.rs",
    ],
    cmd = """
        mkdir -p $(@D)/generated/buffa $(@D)/generated/connect
        $(location @com_google_protobuf//:protoc) \
            --plugin=protoc-gen-buffa=$(location //tools:protoc-gen-buffa) \
            --plugin=protoc-gen-buffa-packaging=$(location //tools:protoc-gen-buffa-packaging) \
            --plugin=protoc-gen-connect-rust=$(location //tools:protoc-gen-connect-rust) \
            --buffa_out=$(@D)/generated/buffa \
            --buffa_opt=views=true,json=true \
            --buffa-packaging_out=$(@D)/generated/buffa \
            --connect-rust_out=$(@D)/generated/connect \
            --connect-rust_opt=buffa_module=crate::proto \
            --buffa-packaging_out=$(@D)/generated/connect \
            --buffa-packaging_opt=filter=services \
            --proto_path=proto \
            anthropic/connectrpc/examples/greet/v1/greet.proto
    """,
    tools = [
        "@com_google_protobuf//:protoc",
        "//tools:protoc-gen-buffa",
        "//tools:protoc-gen-buffa-packaging",
        "//tools:protoc-gen-connect-rust",
    ],
)

# Same codegen, driven by `buf generate` instead of `protoc` directly.
# This proves the rules_buf-supplied buf binary can produce byte-identical
# output, sharing config (buf.gen.yaml) with the local buf CLI workflow.
#
# The buf.gen.yaml is generated at build time so plugin `local:` paths
# resolve to Bazel-sandboxed locations. Output filenames are identical
# to gen_code; we land them under generated_buf/ to avoid collisions.
genrule(
    name = "gen_code_via_buf",
    srcs = [
        "buf.yaml",
        "proto/anthropic/connectrpc/examples/greet/v1/greet.proto",
    ],
    outs = [
        "generated_buf/buffa/mod.rs",
        "generated_buf/buffa/anthropic.connectrpc.examples.greet.v1.greet.rs",
        "generated_buf/connect/mod.rs",
        "generated_buf/connect/anthropic.connectrpc.examples.greet.v1.greet.rs",
    ],
    cmd = """
        mkdir -p $(@D)/generated_buf/buffa $(@D)/generated_buf/connect
        ROOT=$$(pwd)
        cat > $(@D)/buf.gen.yaml <<EOF
version: v2
plugins:
  - local: $$ROOT/$(location //tools:protoc-gen-buffa)
    out: $$ROOT/$(@D)/generated_buf/buffa
    opt: [views=true, json=true]
  - local: $$ROOT/$(location //tools:protoc-gen-buffa-packaging)
    out: $$ROOT/$(@D)/generated_buf/buffa
    strategy: all
  - local: $$ROOT/$(location //tools:protoc-gen-connect-rust)
    out: $$ROOT/$(@D)/generated_buf/connect
    opt: [buffa_module=crate::proto]
    strategy: all
  - local: $$ROOT/$(location //tools:protoc-gen-buffa-packaging)
    out: $$ROOT/$(@D)/generated_buf/connect
    strategy: all
    opt: [filter=services]
EOF
        cd $$(dirname $(location buf.yaml))
        $$ROOT/$(location @rules_buf_toolchains//:buf) generate --template $$ROOT/$(@D)/buf.gen.yaml
    """,
    tools = [
        "@rules_buf_toolchains//:buf",
        "//tools:protoc-gen-buffa",
        "//tools:protoc-gen-buffa-packaging",
        "//tools:protoc-gen-connect-rust",
    ],
)

# Sanity check: the two genrules must produce byte-identical output, since
# buf generate is just a config-driven wrapper around protoc with the same
# plugins.
sh_test(
    name = "gen_outputs_match_test",
    srcs = ["//tools:diff_outputs.sh"],
    args = [
        "$(location :generated/buffa/mod.rs)",
        "$(location :generated_buf/buffa/mod.rs)",
        "$(location :generated/buffa/anthropic.connectrpc.examples.greet.v1.greet.rs)",
        "$(location :generated_buf/buffa/anthropic.connectrpc.examples.greet.v1.greet.rs)",
        "$(location :generated/connect/mod.rs)",
        "$(location :generated_buf/connect/mod.rs)",
        "$(location :generated/connect/anthropic.connectrpc.examples.greet.v1.greet.rs)",
        "$(location :generated_buf/connect/anthropic.connectrpc.examples.greet.v1.greet.rs)",
    ],
    data = [
        ":generated/buffa/mod.rs",
        ":generated/buffa/anthropic.connectrpc.examples.greet.v1.greet.rs",
        ":generated/connect/mod.rs",
        ":generated/connect/anthropic.connectrpc.examples.greet.v1.greet.rs",
        ":generated_buf/buffa/mod.rs",
        ":generated_buf/buffa/anthropic.connectrpc.examples.greet.v1.greet.rs",
        ":generated_buf/connect/mod.rs",
        ":generated_buf/connect/anthropic.connectrpc.examples.greet.v1.greet.rs",
    ],
)

# Library compiles src/lib.rs plus the full generated code (both buffa
# message types and connectrpc service stubs).
rust_library(
    name = "greet_lib",
    srcs = [
        "src/lib.rs",
        "generated/buffa/mod.rs",
        "generated/buffa/anthropic.connectrpc.examples.greet.v1.greet.rs",
        "generated/connect/mod.rs",
        "generated/connect/anthropic.connectrpc.examples.greet.v1.greet.rs",
    ],
    crate_root = "src/lib.rs",
    edition = "2021",
    deps = [
        "@crates//:buffa",
        "@crates//:connectrpc",
        "@crates//:futures",
        "@crates//:http-body",
        "@crates//:serde",
        "@crates//:serde_json",
    ],
)

rust_test(
    name = "greet_lib_test",
    crate = ":greet_lib",
    edition = "2021",
)
