[package]
name = "streaming-test"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
connectrpc = { path = "../../connectrpc", features = ["server", "axum", "client", "tls"] }
buffa = { workspace = true }
buffa-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = "0.1"
futures = { workspace = true }
axum = { workspace = true }

[build-dependencies]
connectrpc-build = { path = "../../connectrpc-build" }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
rcgen = { workspace = true }

[lints]
workspace = true
